--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-11-13  Jost Boekemeier  <jostb@intern>
+
+	FIXME: Entry missing
+	
+2005-11-06  Jost Boekemeier  <jostb@intern>
+	
+	FIXME: Entry missing
+	
+2005-11-05  Jost Boekemeier  <jostb@intern>
+	
+	FIXME: Entry missing
+
 2005-09-19  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/servlet/CGIServlet.java (run): Close the post
