--- a/README
+++ b/README
@@ -10,7 +10,7 @@ What is the PHP/Java Bridge?
 
 Build and execution instructions:
 ---------------------------------
-  NOTE: If you have Security Enhanced Linux, you must update the policy
+  NOTE: If you run Security Enhanced Linux, you must update the policy
   and tag the files with the correct SEL contexts, please see below, or 
   please install the binary RPM instead.
 
@@ -19,14 +19,14 @@ Build and execution instructions:
           java -version        # 1.4 or above (1.5 or 1.6 recommended)
           gcc --version        # 3.2.3 or above (4.0.x recommended)
           apachectl -version   # Apache 1.3 or above (2.x recommended)
-          php-config --version # PHP 4.3.2 or above (5.x recommended)
+          php-config --version # PHP 4.3.0 or above (5.x or 6.x recommended)
           make null --version  # GNU make 3.79 or above
 
           phpize && 
           ./configure --with-java=/opt/IBMJava2-14 \
-                      --disable-servlet &&
-                      --disable-script && 
-                      --disable-faces
+                      --disable-servlet \
+                      --disable-script \ 
+                      --disable-faces &&
           make &&
           su -c "make install"
 
@@ -41,7 +41,12 @@ Build and execution instructions:
    Permanently activate the module
    -------------------------------
 
-  To permanently activate the extension for all users please add the
+  The bridge consists of two parts, the "frontent", usually Apache/PHP
+  and our "java.so" and the "backend". The following describes how to
+  start the backend (if necessary) and how to configure the frontend to
+  use it.
+
+  To permanently activate the frontend for all users please add the
   following lines to the php.ini or add a file java.ini to the
   directory that contains the php module descriptions (usually
   /etc/php.d/) with the following content:
@@ -53,18 +58,21 @@ Build and execution instructions:
           java.socketname="/var/run/.php-java-bridge_socket"
 
 
-  OPTION 1: You can use local sockets to connect to a local backend. 
-  Copy the executable php-java-bridge to /usr/sbin, make it executable 
-  with the command "chmod +x /usr/sbin/php-java-bridge".
+  OPTION 1: "Local backend using a service script."
+  You can use local sockets to connect to a local backend. Copy the
+  executable php-java-bridge to /usr/sbin, make it executable with the
+  command "chmod +x /usr/sbin/php-java-bridge".
 
   This option can be used if "Security Enhanced Linux" is switched on.
+  It cannot be used in a multi-user environment where each user wants
+  to run his/her own instance of the backend.
 
 
-  OPTION 2: You can deploy the PHP/Java Bridge into a standard
-  servlet engine or an application server. Deploy JavaBridge.war using
-  the application server's tools. Disable the java.socketname and
-  java.log_file option and set the java.hosts and java.servlet option,
-  for example:
+  OPTION 2: "The J2EE backend."
+  You can deploy the PHP/Java Bridge into a standard servlet engine or
+  an application server. Deploy JavaBridge.war using the application
+  server's tools. Disable the java.socketname and java.log_file option
+  and set the java.hosts and java.servlet option, for example:
 
           extension = java.so
           [java]
@@ -73,10 +81,15 @@ Build and execution instructions:
           java.hosts="127.0.0.1:8080"
 
   This option can be used if "Security Enhanced Linux" is switched
-  on.
+  on. It can be used in a multi-user environment, users can install
+  their own .war files and customize them as necessary. It can also
+  be used if Apache or IIS are not available, the .war files can be
+  configured to connect to a system FCGI php server or to run a php
+  CGI binary for each php request.
 
 
-  OPTION 3: You can start the bridge as a sub-process of apache. Disable
+  OPTION 3: "Local backend as an apache sub-process".
+  You can start the bridge as a sub-process of apache. Disable
   java.socketname, java.servlet and java.hosts. For example:
 
           extension = java.so
@@ -88,8 +101,9 @@ Build and execution instructions:
   on.
 
 
-  Option 4: You can use the java script API to allocate and to invoke
-  php instances from a HTTP pool. Disable java.socketname and set
+  Option 4: "JSR 223 Scripting API."
+  You can use the java script API to allocate and to invoke php
+  instances from a HTTP pool. Disable java.socketname and set
   java.servlet. For example:
 
           extension = java.so
@@ -99,22 +113,36 @@ Build and execution instructions:
   After that you can call out to your web server's php scripts, for
   example:
 
+     <?php
+
+       function hello() {return "Hello java world!";}
+
+       // call() checks for HTTP request header X_JAVABRIDGE_CONTEXT
+       java_context()->call(java_closure()) ||die("Call test.php from java!");
+     ?>
+
      PhpScriptEngine engine = new PhpScriptEngine();
 
-     // Use a URLReader "wrapper" to pass the apache URL to the engine.
+     // Use a URLReader "adapter" to pass the apache URL to the engine.
      // engine.eval will create a php continuation on the web server ...
      engine.eval(new URLReader(new URL("http://127.0.0.1/test.php")));
 
      //...and call procedures within the allocated continuation...
-     String s=((Invocable)engine).call("java_get_server_name", new Object[]{});
-     System.out.println("connected to java backend: "+s);
+     String s=((Invocable)engine).call("hello", new Object[]{});
+     System.out.println("test.php::hello() returned: "+s);
 
      //.. release the allocated continuation:
      engine.release();
 
   This option can be used if "Security Enhanced Linux" is switched
-  on.
-
+  on. It requires php-script.jar, please see the --enable-script
+  configure option above. Furthermore this option is required if you
+  want to run php from a framework such as "Java Server Faces". You can
+  build the required php-faces.jar using the --enable-faces configure
+  option. For other frameworks (e.g. "Struts") you must write your own
+  PhpStrutsScriptContextFactory.java, PhpStrutsScriptContext.java and
+  PhpStrutsScriptEngine.java. You can use the php faces implementation
+  as a template.
 
   After you have created the correct .ini entries, start the backend:
 
@@ -126,6 +154,9 @@ Build and execution instructions:
 
           Example for option #4: <not needed, backend is the calling VM itself>
 
+  Note that the above options are exclusive; if you switch off the 
+  java.socketname and try to start the local backend using the service
+  script, the script will complain that the socketname is not set.
 
   Check the status:
 
@@ -139,8 +170,8 @@ Build and execution instructions:
           java.java_home = <system dependent path to the java install dir>
           java.java      = <system dependent path to the java binary>
           java.socketname= <local ("unix domain") communication channel>
-          java.hosts     = <add. bridge hosts e.g.: server1:9267;server2:9268>
-          java.servlet   = <On/Off or path, e.g.: "/JavaBridge/PhpJavaServlet"
+          java.hosts     = <add. backends e.g.: server1:9267;server2:9268>
+          java.servlet   = <On/Off or path, e.g.: "/JavaBridge/PhpJavaServlet">
 
   Please first look at the output of phpinfo() to see the original
   values.  
@@ -155,8 +186,8 @@ Build and execution instructions:
 
   However, when running the bridge in a production environment, it is
   recommended to start the PHP/Java Bridge as a system service,
-  independent of the web server. The script "php-java-bridge.service"
-  can be used on SysV based init systems to automatically start and stop
+  independent of the web server. On SysV based init systems the
+  "php-java-bridge.service" can be used to automatically start and stop
   the bridge as a system service.  Please see the RedHat RPM download
   for an example.
 
@@ -207,8 +238,22 @@ Build and execution instructions:
   the apache document root directory at run-time.
 
   A more reasonable approach would be to remove mod_jk and to create a
-  shared web directory for tomcat and apache.  This is the default since
+  shared web directory for tomcat and apache. This is the default since
   RedHat Fedora 4.
+
+  Most modern frameworks, Java Server Faces for example, require that
+  you manually forward to the "backend", anyway. The code would look
+  like:
+
+  <?php
+   ...
+   function jsfValidateEntry($ctx, $arg, $value) { ...}
+
+   // check if we're called from the framework, forward if call failed.
+   java_context()->call(java_closure()) || header("Location: index.jsf");
+  ?>
+   
+  So you probably won't miss mod_jk's automatic forward.
 
 ------------------------------------
   64 Bit issues
@@ -236,7 +281,7 @@ Build and execution instructions:
   -----------------------
 
   Read the following instructions only if you don't want to use
-  Apache.
+  Apache or IIS.
 
   It is possible to run PHP from java. Unlike the JSR223 sample
   implementation, which uses the JNI interface to load/call the native
@@ -249,8 +294,48 @@ Build and execution instructions:
   visit http://localhost:8080/JavaBridge and run the supplied JSP and PHP
   examples.
 
-  In case the PHP binary could not be found, please adjust the
-  php_exec (see JavaBridge/WEB-INF/web.xml) setting, for example:
+  If the param-name use_fast_cgi is enabled in the web.xml, a fcgi
+  server does not listen on port 9667 and a fcgi binary can be found
+  as either /usr/bin/php-cgi or /usr/bin/php or c:/php5/php-cgi.exe,
+  then the backend automatically starts the fast cgi server on this
+  computer, with the command:
+
+    cd $HOME
+    /usr/bin/php-cgi -b 127.0.0.1:9667 &
+
+  It starts when the VM starts and stops when the VM terminates.
+
+
+  If that failed, the bridge searches for a cgi binary called:
+  
+    php-cgi-<architecture>-<os>.exe or
+
+    php-cgi-<architecture>-<os>.sh or
+
+    php-cgi-<architecture>-<os>
+
+  in the directory WEB-INF/cgi/. On unix the binary must be executable, it
+  is therefore recommended to always use a wrapper .sh script, for example:
+
+  #!/bin/sh
+  # This wrapper script reconstructs the executable permissions
+  # which some zip or .war implementations do not preserve
+  chmod +x ./php-cgi-i386-linux
+  exec ./php-cgi-i386-linux
+
+  Please see the README located in the directory WEB-INF/cgi/ for
+  details.
+
+  The <architecture> and <os> values are calculated as follows:
+
+    System.getProperty("os.arch").toLowerCase();
+    System.getProperty("os.name").toLowerCase();
+
+  Please see the output of test.php for details.
+
+
+  It is also possible to adjust the php_exec setting (see
+  WEB-INF/web.xml), for example:
 
       <param-name>php_exec</param-name>
       <param-value>/usr/local/bin/php-cgi</param-value>
@@ -260,14 +345,12 @@ Build and execution instructions:
       <param-name>php_exec</param-name>
       <param-value>c:/PHP/php-cgi.exe</param-value>
 
-  You can also copy your php executable to the JavaBridge/WEB-INF/cgi
-  folder, please read the file JavaBridge/WEB-INF/cgi/README for
-  details.
-
-  In case your application server denies calling the CGI binary, add a
-  policy to the JavaBridge.war which allows execution of PHP. This is
-  AS specific. However, for a first test, switch off security checking
-  in general by adding the following to the application server's JRE
+  In case your application server denies calling the cgi binary,
+  either start a fast cgi server on port 9667 as a separate process, for
+  example from a service script, or add a policy to the JavaBridge.war
+  which allows execution of the cgi binary. This is AS
+  specific. However, for a first test, switch off security checking in
+  general by adding the following to the application server's JRE
   "java.policy" file:
 
     grant {
@@ -279,7 +362,7 @@ Build and execution instructions:
   binary from tomcat. Please use the tomcat mod_jk adapter to connect
   tomcat with apache. That way PHP is managed by the apache pool, JSP
   files are forwarded via the mod_jk adapter and PHP/Java calls via the
-  PHP/Java bridge.
+  PHP/Java Bridge.
 
 ------------------------------------
   Loading on-demand with dl()
@@ -504,12 +587,12 @@ Build and execution instructions:
   On other systems, such as Windows and Mac OSX or when the backend is
   running in a standard J2EE (servlet-, AS-) environment where local
   channels are not available, the bridge opens a TCP port on 9167
-  (JavaBridge.jar) or 9267 (MonoBridge.exe) or 9567 (JavaBridge.war) or
-  above and binds to all(!) available network cards. When running as a
+  (JavaBridge.jar) or 9267 (MonoBridge.exe) or 9567 (JavaBridge.war) 
+  and binds to all(!) available network cards. When running as a
   CGI binary the port is 9567 (CGI) or 9667 (FastCGI) and only the
   loopback (127.0.0.1) interface is used.
 
-  Please make sure that the ports in the range [9167, ..., 9767[ are
+  Please make sure that the ports in the range [9167, ..., 9667] are
   protected and cannot be accessed from the internet.
 
   In J2EE application servers where the security policy denies opening
